--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#notable projects">Notable projects</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="https://www.linkedin.com/in/jenorison-muji/">Awards & Certifications</a></li>
+            <li><a href="https://certificationmine.netlify.app">Awards & Certifications</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -138,12 +138,10 @@
     <!-- Skills Section -->
     <section id="skills" class="container">
         <h2>Skills</h2>
-        <ul>
-            <li></p><strong>Microsoft Office, Google Suites, Microsoft 365, Power BI, R-software<strong> - Proficient in tools necessary for documentation, research, and presentations.</p></li>
-            <li></p><strong>Project Management<strong> - Monitored and administered research project.</p></li>
-            <li></p><strong>Partnership Development<strong> - Built strategic alliances with academic and research institutions.</p></li>
-            <li></p><strong>Environmental Policy and Assessment<strong> - Expertise in EIA which is critical for sustainability projects.</p></li>
-        </ul>
+            <p><strong>Microsoft Office, Google Suites, Microsoft 365, Power BI, R-software</strong> - Proficient in tools necessary for documentation, research, and presentations.<p>
+            <p><strong>Project Management</strong> - Monitored and administered research project.<p>
+            <p><strong>Partnership Development</strong> - Built strategic alliances with academic and research institutions.<p>
+            <p><strong>Environmental Policy and Assessment</strong> - Expertise in EIA which is critical for sustainability projects.<p>
     </section>
 
     <!-- Contact Section -->
@@ -154,11 +152,12 @@
         <p>Phone: +60162489049</p>
     </section>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; Copyright © 2024 Jenorison Muji All rights reserved.<p>
-		<p>This work is protected by copyright law. No part of this publication may be reproduced, distributed, or transmitted in any form or by any means, including photocopying, recording, or other electronic or mechanical methods, without the prior written permission of the copyright owner, except in the case of brief quotations in reviews or scholarly works. For permission requests, write to the publisher.</p>
-    </footer>
+	<!-- Footer -->
+	<footer>
+		<p>&copy; Copyright 2024 Jenorison Muji All rights reserved.</p>
+		<p class="small-text">This work is protected by copyright law. No part of this publication may be reproduced, distributed, or transmitted in any form or by any means, including photocopying, recording, or other electronic or mechanical methods, without the prior written permission of the copyright owner, except in the case of brief quotations in reviews or scholarly works. For permission requests, write to the publisher.</p>
+	</footer>
+
 </body>
 </html>
 
